Fix the cleared balance of liability accounts.

The problem was caused by the fact that when refactored, the code
didn't consider the fact that previously the balance was also being
multiplied by factor. Instead of using factor at each step use it
only at the end when the result is returned since it's faster this
way.

BUG: 338684